<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.kostadin.tengag.MainActivity">
    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:paddingBottom="12dp"
        android:paddingTop="12dp">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/welcome"
            android:textSize="24sp"
            android:gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:text="@string/welcome_description"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rec_view"
        android:layout_below="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/black"
        android:layout_alignParentBottom="true"
        android:paddingTop="12dp"
        android:paddingBottom="12dp">
        <Button
            android:id="@+id/btn_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/black"
            android:drawableTop="@mipmap/ic_home_white"
            android:text="@string/home"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/btn_explore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/black"
            android:drawableTop="@mipmap/ic_search_white_24dp"
            android:text="@string/explore"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/btn_videos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/black"
            android:drawableTop="@mipmap/ic_play_arrow_white_24dp"
            android:text="@string/videos"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/btn_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/black"
            android:drawableTop="@mipmap/ic_notifications_white_24dp"
            android:text="@string/news"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/btn_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/black"
            android:drawableTop="@mipmap/ic_android_white_24dp"
            android:text="@string/profile"
            android:textColor="@color/white" />

    </LinearLayout>


</RelativeLayout>
